# open-dicom-toolkit

./: .gitignore  Dockerfile.api  README.md  config.yaml  docker-compose.yml  main.py  pyproject.toml  verify_modules.py
.github/workflows/: build.yml  test.yml
dicom_platform/: __init__.py
dicom_platform/core/: __init__.py  operator.py  registry.py
dicom_platform/operators/: __init__.py  base.py
docs/: README.md  architecture.md  core.md  executor.md  operators.md  planner.md
docs/superpowers/specs/: 2026-04-08-plugin-system-design.md
examples/: README.md
src/: cli.py  config.py  main.py  server.py  ui.py
src/core/: __init__.py  errors.py  operator.py  registry.py  task_capability.py
src/executor/: __init__.py  executor.py
src/operators/: __init__.py  base.py  batch.py  carotid_plaque.py  deidentifier.py  dicomweb_client.py  dicomweb_operator.py  onnx_runner.py
src/planner/: __init__.py  planner.py
tests/: test_batch.py  test_deidentifier.py  test_executor.py  test_operator.py  test_operators.py  test_planner.py
