[project]
name = "dicom-agent-toolkit"
version = "0.1.0"
description = "AI Agent-driven DICOM medical imaging analysis toolkit"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpy>=1.24.0",
    "pydicom>=2.4.0",
    "simpleitk>=2.3.0",
    "onnxruntime>=1.16.0",
    "opencv-python>=4.8.0",
    "pyyaml>=6.0.0",
    "requests>=2.31.0",
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "python-multipart>=0.0.26",
    "fastapi-radar>=0.3.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.21.0",
]
ui = [
    "gradio>=4.0.0",
    "streamlit>=1.28.0",
]
server = [
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "python-multipart>=0.0.26",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
